--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
         const btn=document.getElementById('btn-form');
         const list=document.getElementById('bottom-card-container');
 
-        const todos=["Plan weekend trip itinerary","Buy groceries for the week"];
+        // const todos=["Plan weekend trip itinerary","Buy groceries for the week"];
+        // let todos= JSON.parse(localStorage.getItem("todos")) || [];
+        let todos=[];
 
         function renderTodos(){
         list.innerHTML=" ";
@@ -80,49 +82,99 @@
                         </svg>
                     </div>    
                 </div>
-                <div class="card-text">${ele}</div>
+                <div class="card-text">${ele.data}</div>
             </div>`
             list.appendChild(item);
             });
         }
 
         form.addEventListener("submit",(e)=>{
+            getData();
             e.preventDefault();
-            const newTodo=input.value;
-            todos.push(newTodo);
+            const newTodo={data :input.value};
+            // todos.push(newTodo);
+            // localStorage.setItem("todos",JSON.stringify(todos));
+            sendToFirebase(newTodo);
             renderTodos();
             input.value="";
         });
         function deleteTodo(index){
             todos.splice(index,1);
+            localStorage.setItem("todos",JSON.stringify(todos));
             renderTodos();
         }
 
         function editTodo(index){
+
             const todo=todos[index];
+            console.log(todo,"edit todo");
+            console.log(list.children[index])
             const li=list.children[index];
+            console.log(li,"li")
             li.innerHTML=`
             <div class="bottom-card">
                 <div class="button-div">
-                    	<button onClick=updateInput(${index}) >Update</button>
+                    	<button onClick=updateInput(${todo.id},${index}) >Update</button>
                         <button onClick=cancelEdit()>Cancel</button>
                 </div>
-                <div class="card-text"><input id="update-input" type="text" value="${todo}" class="edit-input" required/></div>
+                <div class="card-text"><input id="update-input" type="text" value="${todo.data}" class="edit-input" required/></div>
             </div>
             `;
+            console.log(todo);
+        }
+        let updatedObject;
+
+        function updateInput(id,index){
+            console.log("running in update");
+            const input=list.children[index].getElementsByClassName("edit-input")[0];
+            console.log(input,"updated input");
+            const newInput={data:input.value};
+            // todos[index]=newInput;
+            // updatedObject={updatedObject}
+            // localStorage.setItem("todos",JSON.stringify(todos));
+            editTodoFetchRequest(id,newInput);
+        
         }
 
+        async function editTodoFetchRequest(todoId,data){
+            console.log("running in fetch")
+            const result=await fetch(`https://fir-db-7355f-default-rtdb.firebaseio.com/todos/${todoId}.json`,{
+                method:"PUT",
+                body: JSON.stringify(data) ,
+                headers:{
+                    "content-type":"application/json"
+                }
+            })
+            const updatedTodo= await result.json();
+            console.log(updatedTodo);
 
-        function updateInput(index){
-            const input=list.children[index].getElementsByClassName("edit-input")[0];
-            const newInput=input.value;
-            todos[index]=newInput;
-            renderTodos(); 
+            renderTodos();
         }
         function cancelEdit(){
             renderTodos();
         }
 
+        function sendToFirebase(data){
+            fetch("https://fir-db-7355f-default-rtdb.firebaseio.com/todos.json",{
+                method:"POST",
+                body: JSON.stringify(data) ,
+                headers:{
+                    "content-type":"application/json"
+                }
+            })
+        }
+        async function getData(){
+            const result= await fetch("https://fir-db-7355f-default-rtdb.firebaseio.com/todos.json")
+            let Data= await result.json();
+            console.log('Data',Data);
+            todos=[];
+            for(let key in Data){
+                todos.push({ id:key ,...Data[key]});
+            }
+            console.log("updated todos",todos)
+            renderTodos();
+        }
+        getData();
         renderTodos();
     </script>
 </body>
